--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,11 @@ author_email = cneumann@students.uni-mainz.de
 description = Some Utils for my projects
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/kyuunin/kyuutils
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/kyuunin/kyuutils/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 
 [options]
